--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,15 +3,17 @@ Title: Explore Sustainability Metrics Data for New England
 Version: 0.0.0.9000
 Authors@R: 
     person("Christopher", "Donovan", , "christopher.donovan@uvm.edu", role = c("aut", "cre"))
-Description: DESCRIPTION
+Description: This is the description.
 License: GPL (>= 3)
 Imports: 
     config,
     ggplot2,
     golem,
-    shiny
+    pkgload,
+    shinipsum,
+    shiny,
+    spelling
 Suggests: 
-    spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
