--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(run_app)
 import(ggplot2)
 import(shinipsum)
 import(shiny)
+import(shinydashboard)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
