leaflet updates, full screen, tree updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,14 @@ Imports:
     ggplot2,
     golem,
     leaflet,
+    leaflet.extras,
     mapview,
     pkgload,
     shinipsum,
     shiny,
     shinydashboard,
-    spelling
+    spelling,
+    tidyr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
