functioning leaflet proxy with absolute panel selections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(run_app)
 import(DT)
 import(ggplot2)
 import(leaflet)
+import(leaflet.extras)
 import(mapview)
 import(sf)
 import(shinipsum)
