--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ import(mapview)
 import(sf)
 import(shinipsum)
 import(shiny)
+import(shinyWidgets)
 import(shinydashboard)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
