--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,10 @@ Imports:
     collapsibleTree,
     config,
     conflicted,
+    dashboardthemes,
     dplyr,
     DT,
+    fresh,
     ggplot2,
     golem,
     leaflet,
