progress on graph tab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,15 @@ import(ggplot2)
 import(leaflet)
 import(leaflet.extras)
 import(mapview)
+import(plotly)
+import(purrr)
 import(sf)
 import(shinipsum)
 import(shiny)
 import(shinyWidgets)
 import(shinydashboard)
+import(stringr)
+import(tidyr)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
