minimal reactable table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ import(DT)
 import(collapsibleTree)
 import(dplyr)
 import(ggplot2)
+import(htmltools)
 import(leaflet)
 import(leaflet.extras)
 import(mapview)
 import(plotly)
 import(purrr)
+import(reactable)
 import(sf)
 import(shinipsum)
 import(shiny)
