--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(run_app)
 import(DT)
+import(broom)
 import(collapsibleTree)
 import(dplyr)
 import(ggplot2)
@@ -17,6 +18,7 @@ import(shinipsum)
 import(shiny)
 import(shinyWidgets)
 import(shinydashboard)
+import(snakecase)
 import(stringr)
 import(tidyr)
 importFrom(golem,activate_js)
