--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ import(sf)
 import(shinipsum)
 import(shiny)
 import(shinyWidgets)
+import(shinycssloaders)
 import(shinydashboard)
 import(snakecase)
 import(stringr)
